@capnhat_thanhtoan_va_dangnhap_dangky

--- a/src/main/webapp/css/product/style.css
+++ b/src/main/webapp/css/product/style.css
@@ -18,7 +18,9 @@ header {
   header .logo { 
     font-family: 'Brush Script MT', cursive; 
     font-size: 28.8px; 
-  } 
+    text-decoration: none;
+    color: white;
+  }
    
   header nav a { 
     margin-left: 32px; 
